styles.css
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym,
address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var,
b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead,
tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav,
output, ruby, section, summary, time, mark, audio, video
{ margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline; }
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section { display: block; }
body { line-height: 1; }
ol, ul { list-style: none; }
blockquote, q { quotes: none; }
blockquote:before, blockquote:after, q:before, q:after { content: ""; content: none; }
table { border-collapse: collapse; border-spacing: 0; }
*, ::after, ::before
{ -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }


/**********************************************************************/


html {
  height: 100%;
}

q:before {
  content:"“";
}

q:after {
  content:"”";
}

body {
  -webkit-text-size-adjust: none;
  color: #222;
  background: #444;
  font: 15px/1.5em "awsans";
  -webkit-transition: all 0.4s;
  position: relative;
  height: 100%;
  overflow: hidden;
}

/* Global styles 
   ------------- */

a {
  text-decoration: none;
  border-bottom: 1px solid #bbb;
  color: black;
  -webkit-transition: all 0.1s;
  padding-bottom: 2px;
}

a:hover {
  border-bottom: 1px solid black;
  //padding-bottom: 8px;
}

nav {
  padding: 80px;
}

.dash {
  display: none;
}

.title {
  padding-bottom: 40px;
}

.subtitle {
  //border-bottom: 1px solid #444;
  display: inline-block;
  line-height: 1.5em;
  //font-size: 22px;
}

.title, .name {
}

.description {
  opacity: 0.6;
}

.dragging *{
  cursor: -webkit-grabbing !important;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  user-select: none;
}

/* Index 
   ----- */

.index {
  -webkit-transition: all 0.4s;
  //padding: 80px 0 0 100px;
  background: white;
  height: 100%;
  -webkit-transform: translate3d(0,0,0);
  //-webkit-transform-origin: 20% center;
  overflow: scroll;
  border-radius: 3px;
  -webkit-overflow-scrolling: touch;
}

.item-wrapper{
  max-width: 1000px;
  padding: 0 80px;
}

.view-item-mode .index {
  /*  opacity: 0.7;*/
  //overflow: hidden;
  -webkit-transform: scale(0.96);/* translate3d(0,0,0) scale(0.95);*/
}

/* Item styles 
   ----------- */

.name {
  padding-bottom: 0.3em;
  margin-bottom: 0.7em;
  //font-size: 22px;
  border-bottom: 1px solid #ccc;
  display: inline-block;
}

.item {
  width: 100%;
  max-width: 250px;
  height: 100px;
  vertical-align: top;
  display: inline-block;
  border-right: 1px solid rgba(0,0,0,0.12);
  margin-right: 50px;
  margin-bottom: 70px;
}

.item .inner {
  display: inline-block;
  cursor: pointer;
  -webkit-transition: 0.5s;
  padding: 20px 20px 25px;
  margin: -20px;
  border-radius: 5px;
}

.item .inner:hover {
  background: rgba(0,0,0,0.04);
}

.view-item-mode .item .active {
  background: rgba(0,0,0,0.04);
  box-shadow: 0 0 0 1px rgba(0,0,0,0.07);
}

/* Overlay 
   ------- */

.overlay {
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  //z-index: -2;
  pointer-events: none;
  -webkit-transition: all 1s cubic-bezier(1,0,1,0);
}

.view-item-mode .overlay {
  z-index: 2;
  pointer-events: auto;
  -webkit-transition: all 1s cubic-bezier(0,1,0,1);
}

/* Matte 
   ----- */

.matte {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  padding: 5%;
  opacity: 0;
  //background: rgba(245,245,245,0.9);
  background: rgba(0,0,0,0.2);
  -webkit-transition: all 1s;
}

.view-item-mode .matte {
  opacity: 1;
}

.view-item-mode .matte:hover {
}

.view-item-mode .matte:hover .icon {
  opacity: 0.6;
}

.matte .icon{
  opacity: 0;
}

.icon {
  display: inline-block;
  width: 30px;
  margin: -15px;
  border: none;
  line-height: 20px;
  text-align: center;
  border-radius: 50%;
  padding: 5px;
  cursor: pointer;
  font-size: 16px;
  box-shadow: 0 0 0 0px rgba(0,0,0,0);
  -webkit-transition: all 0.2s;
}

.icon:hover {
  background: rgba(0,0,0,0.05);
  opacity: 1;
  box-shadow: 0 0 0 10px rgba(0,0,0,0.05);
}

/* Grabby
   ------ */

.grabby {
  position: absolute;
  top: 0px;
  bottom: 0px;
  left: 0px;
  width: 30px;
  cursor: -webkit-grab;
  padding: 12px 10px;
  z-index: 5;
}

.grabby > i {
  display: inline-block;
  border-right: 1px solid rgba(120,120,120,0.5);
  height: 30px;
  margin: -15px 1px;
}

/* View
   ---- */

.view {
  background: #f4f4f4;
  box-shadow: 0 0 5px rgba(0,0,0,0.1);
  /* ----- */
  position: absolute;
  left: 10%;
  top: 0px;
  right: 0px;
  bottom: 0px;
  border-radius: 3px;
  /* ----- */
  //-webkit-transition: all 0.4s cubic-bezier(0.570, 0.000, 1.000, 0.705);
  -webkit-transition: all 0.5s cubic-bezier(1.000, 1.380, 0.280, 0.895);
  -webkit-transform: translate3d(96%, 0, 0);
}

.view-item-mode .view {
  //-webkit-transition: all 500ms cubic-bezier(0.115, 0.910, 0.470, 1.00);
  -webkit-transform: translate3d(0%, 0, 0);
}

.view-content {
  overflow: scroll;
  height: 100%;
  -webkit-overflow-scrolling: touch;
}

.spinner {
  -webkit-transition: all 1s;
  background-color: rgba(245,245,245,0.8);
  position: absolute;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  opacity: 0;
  pointer-events: none;
  text-align: center;
  z-index: 999;
}

.loading .spinner{
  opacity: 1;
}

@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
  }
}

.spinner > .icon {
  display: inline-block;
  height: 200px; width: 200px;
  position: fixed;
  top: 50%;
  opacity: 0;
  margin: -100px;
  font-size: 100px;
  line-height: 200px;
  -webkit-transform-origin: 50% 65%;
}

.loading .spinner > .icon {
  opacity: 1;
  -webkit-animation: spin 0.7s linear infinite;
}

.view-header {
  padding-top: 80px;
}

section.text {
  padding-right: 100px;
  padding-left: 100px;
}

.view-item-mode {
  overflow: hidden;
}

.caption {
  //background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,0.3) 100%);
  background: rgba(235,235,235,0.8);
  position: absolute;
  bottom: 0px;
  left: 0px;
  right: 0px;
  padding: 50px;
  opacity: 0;
  -webkit-transform: translate3d(0,30px,0);
  -webkit-transition: all 0.3s;
}

.dark .caption {
  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.3) 100%);
  color: white;
}

.show-caption .caption {
  opacity: 1;
  -webkit-transform: none;
}

.more-info {
  position: absolute;
  bottom: 0px;
  z-index: 999;
  border-radius: 50%;
  background: rgba(0,0,0,0.08);
  left: 0px;
  margin: 20px;
  cursor: pointer;
  -webkit-transition: all 0.2s;
  width: 50px;
  height: 50px;
  text-align: center;
  line-height: 50px;
}

.more-info:hover {
  -webkit-transform: none;
  background: rgba(0,0,0,0.15);
}

.dark .more-info {
  color: white;
  background: rgba(0,0,0,0.4);
}

.dark .more-info:hover {
  background: rgba(0,0,0,0.8);
}

.show-caption .more-info {
  opacity: 0;
  -webkit-transform: scale(0.6);
}

.view section {
  position: relative;
  overflow: hidden;
  -webkit-perspective: 1500;
  -webkit-backface-visibility: hidden;
}

.view section.overflow {
  overflow: visible;
  z-index: 2;
}

.view section.img {
  //height: 100%;
}

.view .img > img{
  width: 100%;
  max-width: 1000px;
  margin: auto;
  display: block;
  -webkit-user-select: none;
  -webkit-user-drag: none;
}

.view .img.wide > img{
  max-width: none;
}

.view .img.sidebyside > img{
  width: 48%;
  margin-right: 2%;
  margin-bottom: 15%;
  display: inline-block;
}

.view .fig {
  text-align: center;
  //background: #f4f4f4;
  box-shadow: inset 0 0 50% 0 rgba(0,0,0,0.15);
  overflow: visible;
}

.iphone {
  display: inline-block;
}

.iphone-back {
  margin: 80px 0;
  display: inline-block;
  background: rgba(230,230,230,0.75);
  border-radius: 20px;
  -webkit-transform-style: preserve-3d;
  -webkit-transition: all 1s;
  -webkit-transform: rotateX(-25deg) rotateY(30deg) rotateX(10deg);
  box-shadow: 0 50px 100px rgba(0, 0, 0, 0.2);
}

.iphone:hover .iphone-back{
  -webkit-transform: none;
}

.iphone-front{
  padding: 80px 5px;
  border-radius: 20px;
  -webkit-transform: translate3d(0,0,40px);
  background: rgba(245,245,245,0.95);
  box-shadow: -3px 3px 0 5px white;
  -webkit-transition: all 1s;
}

.iphone:hover .iphone-front{
  box-shadow: 0px 0px 0 5px white;
}

.iphone img {
  width: 320px;
  height: 480px;
}

.flip-wrap {
  -webkit-perspective: 1500;
}

.flipper {
  -webkit-transform-origin: left center;
  -webkit-transform: translate3d(0,0,0);
  -webkit-transform-style: preserve-3d;
  -webkit-transition: all 0.9s;
  cursor: pointer;
}

.flipped > .flipper {
  -webkit-transform: translate3d(100%,0,0) rotateY(-180deg);
}

.flipper > .obverse {
  -webkit-backface-visibility: hidden;
}

.flipper > .reverse {
  -webkit-backface-visibility: hidden;
  -webkit-transform: rotateY(180deg);
  position: absolute;
  top: 0px;
  left: 0px;
}

.flipper img {
  width: 100%;
}

.view section.text {
  padding-top: 50px;
  padding-bottom: 50px;
  max-width: 700px;
  margin: auto;
}

.view section.meta {
  height: auto;
}

.view p {
  margin: 0 0 2em;
  font-size: 22px;
  line-height: 1.3em;
  opacity: 0.8;
}

.view p b {
  font-weight: bold;
}

.view p.h3{
  display: inline-block;
  padding-bottom: 3px;
  margin-bottom: 1.5em;
  border-bottom: 1px solid #222;
}

.view p.sub {
  display: none;
}

.meta{
  line-height: 3em;
}

.meta li {
  opacity: 0.6;
  width: 200px;
  white-space: nowrap;
}

.meta > li > b {
  text-transform: uppercase;
  font-size: 10px;
  letter-spacing: 2px;
  margin-right: 15px;
  width: 100px;
  display: inline-block;
  opacity: 0.7;
}


/**********************************************************************/



@media (min-width: 1000px){
  .item:nth-child(3n+3) {
    border-right: none;
  }
}


/**********************************************************************/


@media (min-width: 700px) and (max-width: 1000px){
  .item:nth-child(2n+2) {
    border-right: none;
  }
}


/**********************************************************************/



@media (max-width: 500px){

  nav {
    padding: 30px;
  }

  .item-wrapper {
    padding: 0px;
  }

  .subtitle {
    padding: 0;
  }

  .index {
    padding: 0px;
  }

  .view {
    left: 0px;
  }

  .view-header {
    padding-top: 50px;
  }

  section.text {
    padding-right: 30px;
    padding-left: 30px;
  }

  .item {
    padding: 0 0 40px 20;
    margin: 0px;
    height: auto;
    border-right: none;
    max-width: none;
    //border-bottom: 1px solid rgba(0,0,0,0.1);
  }

  .item .inner {
    display: block;
    padding: 30px 30px;
    margin: 0px;
  }

  .view .img.sidebyside > img {
    width: 100%;
    margin-right: 0%;
  }

  .text p {
    font-size: 16px;
  }

  .meta > li > b {
    display: block;
    line-height: 1em;
    margin-top: 12px;
  }

}


/**********************************************************************/



@media (max-width: 350px){
  .view {
    //left: 18px;
  }
}


/**********************************************************************/


/*Generated by Font Squirrel (http://www.fontsquirrel.com) on April 28, 2010 11:11:41 AM America/New_York */

@font-face {
  font-family: 'awsans';
  src: url('font/awconquerorsans-light-webfont.eot');
  src: url('font/awconquerorsans-light-webfont.woff') format('woff'),
       url('font/awconquerorsans-light-webfont.ttf') format('truetype'),
       url('font/awconquerorsans-light-webfont.svg#webfontIRLZqcfF') format('svg');
  font-weight: normal;
  font-style: normal;
}

